@@ -5,6 +5,7 @@
     fix toolbar checkbox item properties icon insensitive #418
     fix panel_sliders-key used as task height 0.9.2-0.9.3 #419
     reset Use-as-opener on import/install plugin; update man
+    task error continue no present open task dialog
 0.9.3   2014-01-17:
     fix memory leak on draw selection rectangle on desktop #397
     [Dialog] fix returned windowsize=1x1 [GTK 3.8+]
